--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Name </title>
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
+
 </head>
 <body>
-
+  <div class="function-search">
+    <h2> Where does your name originate from? </h2>
+    <input type="text" id="search">
+    <input type="button" value="Search" id="btn">
+    <div id="results"></div>
+  </div>
+  <div id="images"></div>
 </body>
 </html>
